test/files/neg/t4425.check
t4425.scala:3: error: object X is not a case class constructor, nor does it have an unapply/unapplySeq method
Note: def unapply(x: Int)(y: Option[Int]): None.type exists in object X, but it cannot be used as an extractor due to its second non-implicit parameter list
  42 match { case _ X _ => () }
                    ^
one error found
